# svgtag

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py
SVGtag/: SVGprocess.py  __init__.py  shape2svg.py  text2svg.py  text2svg_self.py
SVGtag/generators/: ring.py  tag.py  wifi.py  wifi_gen.py
SVGtag/scripts/: export.py
examples/: analysis_bug_trimesh.py  analysis_load_trimesh.py  business_cards.py  cards.py  config.py  etiquettes_forme.py  etiquettes_plongee.py  etiquettes_texte.py  ring.py  wifi_generator.py  wifi_generator_perso.py
examples/outputs/: 01_logo.stl  tag_txt1_1.stl  tag_txt2_1.stl  tag_txt_0.stl  tag_txt_1.stl
examples/outputs/plongee/: autonomie-01_A_txt-B_txt_0.stl  autonomie-01_A_txt_1.stl  autonomie-01_B_txt_1.stl  autonomie-02_A_txt-B_txt_0.stl  autonomie-02_A_txt_1.stl  autonomie-02_B_txt_1.stl  autonomie-03_A_txt-B_txt_0.stl  autonomie-03_A_txt_1.stl  autonomie-03_B_txt_1.stl  autonomie-04_A_txt-B_txt_0.stl  autonomie-04_A_txt_1.stl  autonomie-04_B_txt_1.stl  basique-01_A_txt-B_txt_0.stl  basique-01_B_txt_1.stl  basique-02_A_txt_1.stl  basique-02_B_txt_1.stl  basique-03_A_txt-B_txt_0.stl  basique-03_A_txt_1.stl  basique-03_B_txt_1.stl  basique-04_A_txt-B_txt_0.stl  basique-04_A_txt_1.stl  basique-04_B_txt_1.stl  stabilisation-01_A_txt-B_txt_0.stl  stabilisation-01_A_txt_1.stl  stabilisation-01_B_txt_1.stl  stabilisation-02_A_txt-B_txt_0.stl  stabilisation-02_A_txt_1.stl  stabilisation-02_B_txt_1.stl  stabilisation-03_A_txt-B_txt_0.stl  stabilisation-03_A_txt_1.stl  stabilisation-03_B_txt_1.stl  stabilisation-04_A_txt-B_txt_0.stl  stabilisation-04_A_txt_1.stl  stabilisation-04_B_txt_1.stl  sécurité-01_A_txt-B_txt_0.stl  sécurité-01_A_txt_1.stl  sécurité-01_B_txt_1.stl  sécurité-02_A_txt-B_txt_0.stl  sécurité-02_A_txt_1.stl  sécurité-02_B_txt_1.stl  (+19 more)
examples/outputs/ring/: mon prénom-01.html  mon prénom-01.stl  test-01.html
examples/outputs/wifi/Client ABC_XYZ_20240409-1623/: Client ABC_XYZ_20240409-1623.eps
examples/outputs/wifi/Client ABC_XYZ_20250126-2040/: Client ABC_XYZ_20250126-2040.eps
examples/outputs/wifi/Client ABC_XYZ_20250210-1635/: Client ABC_XYZ_20250210-1635.eps
svg-tag/: SVGprocess.py  shape2svg.py  tag.py  text2svg.py  visualization.py
svg_tag/: SVGprocess.py  export.py  shape2svg.py  tag.py  text2svg.py  text2svg_self.py  visualization.py  wifi_gen.py
svgtag/: __init__.py  shape2svg.py  svgprocess.py  text2svg.py  text2svg_self.py
svgtag/generators/: ring.py  tag.py  wifi.py
svgtag/scripts/: export.py  file_cat.py  visualization.py
tempname/: svgprocess.py
tempname/generators/: ring.py
tests/: test_SVGprocess.py  test_generator_tag.py  test_generator_wifi.py  test_scripts_export.py  test_shape2svg.py  test_text2svg.py
tests/outputs/generators/tag/: 01_logo.stl  side_A.stl  side_B.stl  tag_txt2_1.stl
